Changelog
=========

v0.2.0
======

Non rilasciata.

- Aggiunto Rappresentante Fiscale a CessionarioCommittente.
- Aggiunta Stabile Organizzazione a CessionarioCommittente.
- FormatoTrasmissione supporta FPA12 (Pubblica Amministrazione) e FPR12 (Privati).
- Codice Ufficio PA rinominato in Codice Destinatario.
- Aggiunto campo PECDEstinatario.
- Upgrade to FatturaElettronica v0.3.
- Project rename from FatturaElettronicaPA.Forms to FatturaElettronica.Forms.

v0.1.0
======

Non rilasciata.

- Upgrade to BusinessObject v0.1.5
- Upgrade to FatturaElettronicaPA v0.2