@@ -9,6 +9,7 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 	ProjectSection(SolutionItems) = preProject
 		AUTHORS = AUTHORS
 		CHANGES = CHANGES
+		FatturaElettronica.Forms.nuspec = FatturaElettronica.Forms.nuspec
 		LICENSE = LICENSE
 		README.md = README.md
 	EndProjectSection
