@@ -1,4 +1,4 @@
-Copyright (c) 2014 by Gestionale Amica and contributors. See AUTHORS for more
+Copyright (c) 2017 by Gestionale Amica and contributors. See AUTHORS for more
 details.
 
 Some rights reserved.
