@@ -4,12 +4,12 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("FatturaElettronicaPA.Forms")]
-[assembly: AssemblyDescription("")]
+[assembly: AssemblyTitle("FatturaElettronica.Forms")]
+[assembly: AssemblyDescription("Windows.Forms per FatturaElettronica.NET")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("CIR 2000")]
-[assembly: AssemblyProduct("FatturaElettronicaPA.Forms")]
-[assembly: AssemblyCopyright("Copyright © CIR 2000 2015")]
+[assembly: AssemblyCompany("Nicola Iarocci, CIR2000")]
+[assembly: AssemblyProduct("FatturaElettronica.Forms")]
+[assembly: AssemblyCopyright("Copyright © CIR2000 2017")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -31,5 +31,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("0.1.0.0")]
-[assembly: AssemblyFileVersion("0.1.0.0")]
+[assembly: AssemblyVersion("0.2.0.0")]
+[assembly: AssemblyFileVersion("0.2.0.0")]
