@@ -6,12 +6,13 @@ v0.2.0
 
 Non rilasciata.
 
+- Rilasciato come NuGet package.
 - Aggiunto Rappresentante Fiscale a CessionarioCommittente.
 - Aggiunta Stabile Organizzazione a CessionarioCommittente.
 - FormatoTrasmissione supporta FPA12 (Pubblica Amministrazione) e FPR12 (Privati).
 - Codice Ufficio PA rinominato in Codice Destinatario.
 - Aggiunto campo PECDEstinatario.
-- Upgrade to FatturaElettronica v0.3.
+- Upgrade to FatturaElettronica v0.3.1.
 - Project rename from FatturaElettronicaPA.Forms to FatturaElettronica.Forms.
 
 v0.1.0
